### Fix bug in packaging (HEAD -> main)
>Tue, 28 Feb 2023 13:30:23 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Change make to make user to install the package in the local directory (origin/main)
>Tue, 28 Feb 2023 12:27:17 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add deploy for gitlab-ci
>Tue, 28 Feb 2023 12:25:42 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix a bug with the integration of time in pymarsseason Change configuratio file for sphinx
>Tue, 28 Feb 2023 02:44:56 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Added updating of PDS3 objects Added the creation of STAC based on JSON response without PDS3 objects Added documentation
>Tue, 28 Feb 2023 02:04:44 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Refactoring Improve documentation
>Sun, 26 Feb 2023 05:04:49 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Refactoring Add tests
>Wed, 22 Feb 2023 18:31:39 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add new storage strategy to handle a large number of items in one collection
>Mon, 20 Feb 2023 13:44:31 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix bug